--- a/blogPessoal/src/app/login/login.component.html
+++ b/blogPessoal/src/app/login/login.component.html
@@ -9,15 +9,15 @@
         <div>
           <div class="form-group">
             <label for="exempleInputEmail1">Endereço de e-mail</label>
-            <input type="email" class="form-control" id="exempleInputEmail1" aria-describedby="emailHelp" placeholder="Seu e-mail">
+            <input type="email" class="form-control" id="exempleInputEmail1" aria-describedby="emailHelp" placeholder="Seu e-mail" [(ngModel)]='userLogin.usuario'>
             <small id="emailHelp" class="form-text text-muted"> Nunca devemos compartilhar nosso e-mail com ninguém.</small>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Senha</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha" [(ngModel)]= 'userLogin.senha' >
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-success w-25 ">Entrar</button>
+            <button type="submit" class="btn btn-outline-success w-25" (click)= 'entrar()'>Entrar</button>
           </div>
         </div>
       </div>
