--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -87,14 +87,14 @@
                     <div class="card-header">
                         <div class="row d-flex align-items-center">
                             <div class="col-md-8">
-                                <h5 class="card-title"> {{item.titulo}}</h5>
-                                <small>Tema: {{item.tema.descricao}} </small>
+                                <h5 class="card-title">{{item.titulo}}</h5>
+                                <small>Tema: {{item.tema.descricao}}</small>
                             </div>
                             <div class="col-md-4 d-flex justify-content-end">
-                                <button class="mr-3 btn btn-outline-info">
+                                <button class="mr-3 btn btn-outline-info"[routerLink]="['/editar-post',item.id]">
                                     Editar
                                 </button>
-                                <button class="btn btn-outline-danger ml-3">
+                                <button class="btn btn-outline-danger ml-3"[routerLink]="['/delete-post',item.id]">
                                     Apagar
                                 </button>
                             </div>
